--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,16 @@
     <div class="preview" style="background:#cccccc;height: 20em;text-align:center;z-index:1;"><p style="line-height: 20em;color:black;left:auto">未選擇任何檔案</p></div>
   </form>
   </div>
+  
+  <div class="container">
+    <div class="btn" id="send" style="background-color: green;">Send</div>
+    <div class="btn" id="red" style="background-color: red;">red</div>
+    <div class="btn" id="blue" style="background-color: blue;">blue</div>
+</div>
+
+<h1 class="mume-header" >結果</h1>
+<div class="container" id="result"></div>
+</div>
 
   
 
