--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,9 +46,11 @@
 </div>
 
 <h1 class="mume-header" id="rt">結果</h1>
-<div class="container" id="result"></div>
 
+<div class="container">
 <canvas id="myCanvas"></canvas>
+</div>
+
 <div class="text-center" id="show"></div>
 </div>
 
