--- a/app/templates/label.html
+++ b/app/templates/label.html
@@ -20,23 +20,13 @@
   
 <div class="mume markdown-preview" id="main">
       <div class="title">
-        <h1>SMILE</h1>
+        <h1>標註</h1>
       </div>
     
-    <h1 class="mume-header" >上傳照片</h1>
+    <h1 class="mume-header" >照片</h1>
 
   <div style="left: auto;">
-  <form method="post" enctype="multipart/form-data" >
-    <div>
-      <input
-      type="file"
-      id="img_upl"
-      data-target="file-uploader"
-      accept=".jpg, .jpeg, .png"
-      style="position:absolute;height: 20em;width: 100%;">
-    </div>
-    <div class="preview" style="background:#cccccc;height: 20em;text-align:center;z-index:1;"><p style="line-height: 20em;color:black;left:auto">未選擇任何檔案</p></div>
-  </form>
+  
   </div>
   
   <div class="container">
@@ -64,7 +54,7 @@
   
   
 </div>
-  <script src="{{ url_for('static',filename='js/main.js') }}"></script>
+  <script src="{{ url_for('static',filename='js/label/main.js') }}"></script>
   
   
   </body></html>
