--- a/app/templates/label.html
+++ b/app/templates/label.html
@@ -28,26 +28,33 @@
   <div style="left: auto;">
   
   </div>
-  
+  <div class="container">  
+    <img src="" alt="" id="ini_fig">
+  </div>
+
   <div class="container">
-    <div class="btn" id="send" style="background-color: green;">Send</div>
-    <div class="btn" id="red" style="background-color: red;">red</div>
-    <div class="btn" id="blue" style="background-color: blue;">blue</div>
+    <div class="btn" id="getfig" style="background-color: green;">新圖</div>
+    <div class="btn" id="previous" style="background-color: red;">上一個</div>
+    <div class="btn" id="next" style="background-color: blue;">下一個</div>
 </div>
 
-<h1 class="mume-header" id="rt">結果</h1>
+<h1 class="mume-header" id="rt">標籤</h1>
+
 
 <div class="container">
-<canvas id="myCanvas"></canvas>
+  <canvas id="myCanvas"></canvas>
 </div>
 
-<div class="text-center" id="show"></div>
+
+<div class="container text-center">
+  <label for="label">
+    <input autocomplete="off" id="thisLabel" class="text-center" autofocus placeholder="牙位">
+    <button id='submitBtn'>SUBMIT</button>
+  </label>
 </div>
 
   
-
-  
-  
+ 
   
   
   
