--- a/app/templates/label.html
+++ b/app/templates/label.html
@@ -33,9 +33,10 @@
   </div>
 
   <div class="container">
-    <div class="btn" id="getfig" style="background-color: green;">新圖</div>
+    <div class="btn" id="getfig" style="background-color: rgb(0, 0, 0);">新圖</div>
     <div class="btn" id="previous" style="background-color: red;">上一個</div>
     <div class="btn" id="next" style="background-color: blue;">下一個</div>
+    <div class="btn" id="check" style="background-color: green;">Check</div>
 </div>
 
 <h1 class="mume-header" id="rt">標籤</h1>
